--- a/index.html
+++ b/index.html
@@ -12,24 +12,13 @@
     />
     <link rel="stylesheet" href="./src/normalize.css" />
     <link rel="stylesheet" href="./src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <title>Advice generator app</title>
 
-    <title>Frontend Mentor | Advice generator app</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <!-- Advice # Advice ID goes here
-
-  "< Advice text goes here"
-   -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
